Master progress.